# jonawhisper

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Info.plist  LICENSE  Package.swift  README.md  TODO.md  UI_GUIDELINES.md  build.sh  cliff.toml  histoire.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts  wireframe.html
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cmake/: arm-ggml-fix.cmake
src-tauri/crates/jona-detector-claude-code/: Cargo.toml
src-tauri/crates/jona-detector-claude-code/src/: lib.rs
src-tauri/crates/jona-detector-env/: Cargo.toml
src-tauri/crates/jona-detector-env/src/: lib.rs
src-tauri/crates/jona-engine-bert/: Cargo.toml
src-tauri/crates/jona-engine-bert/src/: candle_bert.rs  lib.rs  ort_bert.rs
src-tauri/crates/jona-engine-canary/: Cargo.toml
src-tauri/crates/jona-engine-canary/src/: lib.rs
src-tauri/crates/jona-engine-correction/: Cargo.toml
src-tauri/crates/jona-engine-correction/src/: inference.rs  lib.rs
src-tauri/crates/jona-engine-llama/: Cargo.toml
src-tauri/crates/jona-engine-llama/src/: inference.rs  lib.rs
src-tauri/crates/jona-engine-lm/: Cargo.toml  build.rs  manifest.json
src-tauri/crates/jona-engine-lm/kenlm-c/: kenlm_ffi.cc
src-tauri/crates/jona-engine-lm/src/: lib.rs
src-tauri/crates/jona-engine-parakeet/: Cargo.toml
src-tauri/crates/jona-engine-parakeet/src/: lib.rs
src-tauri/crates/jona-engine-pcs/: Cargo.toml
src-tauri/crates/jona-engine-pcs/src/: inference.rs  lib.rs
src-tauri/crates/jona-engine-qwen/: Cargo.toml
src-tauri/crates/jona-engine-qwen/src/: lib.rs
src-tauri/crates/jona-engine-spellcheck/: Cargo.toml  manifest.json
src-tauri/crates/jona-engine-spellcheck/src/: lib.rs
src-tauri/crates/jona-engine-voxtral/: Cargo.toml  build.rs
src-tauri/crates/jona-engine-voxtral/src/: lib.rs
src-tauri/crates/jona-engine-voxtral/voxtral-c/: voxtral_metal.m
src-tauri/crates/jona-engine-whisper/: Cargo.toml
src-tauri/crates/jona-engine-whisper/src/: lib.rs
src-tauri/crates/jona-engines/: Cargo.toml
src-tauri/crates/jona-engines/src/: audio.rs  bert.rs  canary.rs  common.rs  correction.rs  downloader.rs  lib.rs  llama.rs  llm_prompt.rs  mel.rs  migrations.rs  openai_api.rs  ort_session.rs  parakeet.rs  pcs.rs  qwen.rs  voxtral.rs  whisper.rs
src-tauri/crates/jona-platform/: Cargo.toml  build.rs
src-tauri/crates/jona-platform/src/: audio_devices.rs  ffi.rs  hotkey.rs  lib.rs  macos.rs  paste.rs
src-tauri/crates/jona-provider/: Cargo.toml
src-tauri/crates/jona-provider-anthropic/: Cargo.toml
src-tauri/crates/jona-provider-anthropic/src/: lib.rs
src-tauri/crates/jona-provider-assemblyai/: Cargo.toml
src-tauri/crates/jona-provider-assemblyai/src/: lib.rs
src-tauri/crates/jona-provider-aws-transcribe/: Cargo.toml
src-tauri/crates/jona-provider-aws-transcribe/src/: lib.rs
src-tauri/crates/jona-provider-azure-openai/: Cargo.toml
src-tauri/crates/jona-provider-azure-openai/src/: lib.rs
src-tauri/crates/jona-provider-azure-speech/: Cargo.toml
src-tauri/crates/jona-provider-azure-speech/src/: lib.rs
src-tauri/crates/jona-provider-cohere/: Cargo.toml
src-tauri/crates/jona-provider-cohere/src/: lib.rs
src-tauri/crates/jona-provider-copilot/: Cargo.toml
src-tauri/crates/jona-provider-copilot/src/: lib.rs
src-tauri/crates/jona-provider-deepgram/: Cargo.toml
src-tauri/crates/jona-provider-deepgram/src/: lib.rs
src-tauri/crates/jona-provider-elevenlabs/: Cargo.toml
src-tauri/crates/jona-provider-elevenlabs/src/: lib.rs
src-tauri/crates/jona-provider-gemini-asr/: Cargo.toml
src-tauri/crates/jona-provider-gemini-asr/src/: lib.rs
src-tauri/crates/jona-provider-gladia/: Cargo.toml
src-tauri/crates/jona-provider-gladia/src/: lib.rs
src-tauri/crates/jona-provider-google-speech/: Cargo.toml
src-tauri/crates/jona-provider-google-speech/src/: lib.rs
src-tauri/crates/jona-provider-openai/: Cargo.toml
src-tauri/crates/jona-provider-openai/src/: lib.rs
src-tauri/crates/jona-provider-revai/: Cargo.toml
src-tauri/crates/jona-provider-revai/src/: lib.rs
src-tauri/crates/jona-provider-speechmatics/: Cargo.toml
src-tauri/crates/jona-provider-speechmatics/src/: lib.rs
src-tauri/crates/jona-provider/src/: anthropic.rs  lib.rs  openai.rs
src-tauri/crates/jona-types/: Cargo.toml
src-tauri/crates/jona-types/src/: engine.rs  lib.rs  provider.rs
src-tauri/dicts/: fr_bigram.txt  fr_freq.txt
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  bert_punctuation.rs  canary_asr.rs  candle_punctuation.rs  commands.rs  errors.rs  events.rs  hotkey.rs  http.rs  lib.rs  llm_cleanup.rs  llm_local.rs  llm_prompt.rs  main.rs  mel_features.rs  menu_icons.rs  migrations.rs  model_downloader.rs  ort_session.rs  parakeet_asr.rs  pcs_punctuation.rs  pill.rs  post_processor.rs  process_runner.rs  qwen_asr.rs  recording.rs  state.rs  t5_correction.rs  transcriber.rs  tray.rs  vad.rs
src-tauri/src/asr/: canary.rs  mod.rs  parakeet.rs  qwen.rs  voxtral.rs  whisper.rs
src-tauri/src/cleanup/: bert.rs  candle.rs  itn.rs  llm_cloud.rs  llm_local.rs  llm_prompt.rs  mod.rs  pcs.rs  post_processor.rs  spellcheck.rs  symspell_correct.rs  t5.rs  vad.rs
src-tauri/src/cleanup/itn/: de.rs  en.rs  es.rs  fr.rs  it.rs  mod.rs  nl.rs  pl.rs  pt.rs  ru.rs
src-tauri/src/cleanup/post_processor/: dictation.rs  fillers.rs  mod.rs  (+1 more)
src-tauri/src/commands/: app.rs  audio.rs  engines.rs  history.rs  mod.rs  permissions.rs  providers.rs  settings.rs
src-tauri/src/engines/: bert.rs  canary.rs  correction.rs  downloader.rs  faster_whisper.rs  llama.rs  llm_local.rs  mlx_whisper.rs  mod.rs  moonshine.rs  openai_api.rs  parakeet.rs  pcs.rs  qwen.rs  vosk.rs  voxtral.rs  whisper.rs
src-tauri/src/platform/: audio_devices.rs  audio_ducking.rs  ffi.rs  hotkey.rs  macos.rs  mod.rs  paste.rs
src-tauri/src/recording/: lifecycle.rs  mod.rs  pipeline.rs  threads.rs
src-tauri/src/ui/: mod.rs  pill.rs  tray.rs
(+140 files in other folders)
