[package]
name = "jona-whisper"
version = "0.1.0"
description = "JonaWhisper - Voice-to-text dictation"
authors = ["Jonathan"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "jona_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }

tauri-plugin-clipboard-manager = "2"


serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["stream", "multipart", "json", "blocking"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
rustfft = "6"
futures-util = "0.3"
shellexpand = "3"
thiserror = "2"
crossbeam-channel = "0.5.15"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-i18n = "3"
sys-locale = "0.3"
encoding_rs = "0.8"
ort = { version = "2.0.0-rc.11", features = ["coreml"] }
ndarray = "0.17"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
prost = "0.13"
candle-core = { version = "0.9", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9", features = ["metal", "accelerate"] }
qwen-asr = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }
llama-cpp-2 = { version = "0.1", features = ["metal"] }

core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSSound", "NSApplication", "NSRunningApplication"] }
block2 = "0.6"

[profile.release]
strip = true
lto = "thin"

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = "0.15"
llama-cpp-2 = "0.1"
