[workspace]
members = [
    "crates/jona-types", "crates/jona-platform", "crates/jona-engines", "crates/jona-provider",
    "crates/jona-engine-whisper", "crates/jona-engine-qwen", "crates/jona-engine-canary",
    "crates/jona-engine-parakeet", "crates/jona-engine-voxtral", "crates/jona-engine-llama",
    "crates/jona-engine-bert", "crates/jona-engine-pcs", "crates/jona-engine-correction",
]

[package]
name = "jona-whisper"
version = "0.1.0"
description = "JonaWhisper - Voice-to-text dictation"
authors = ["Jonathan"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "jona_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
jona-types = { path = "crates/jona-types" }
jona-platform = { path = "crates/jona-platform" }
jona-engines = { path = "crates/jona-engines" }
jona-provider = { path = "crates/jona-provider" }
jona-engine-whisper = { path = "crates/jona-engine-whisper" }
jona-engine-qwen = { path = "crates/jona-engine-qwen" }
jona-engine-canary = { path = "crates/jona-engine-canary" }
jona-engine-parakeet = { path = "crates/jona-engine-parakeet" }
jona-engine-voxtral = { path = "crates/jona-engine-voxtral" }
jona-engine-llama = { path = "crates/jona-engine-llama" }
jona-engine-bert = { path = "crates/jona-engine-bert" }
jona-engine-pcs = { path = "crates/jona-engine-pcs" }
jona-engine-correction = { path = "crates/jona-engine-correction" }

tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }

tauri-plugin-clipboard-manager = "2"


serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["stream", "multipart", "json", "blocking"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
rustfft = "6"
futures-util = "0.3"
shellexpand = "3"
thiserror = "2"
crossbeam-channel = "0.5.15"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-i18n = "3"
sys-locale = "0.3"
encoding_rs = "0.8"
ort = { version = "2.0.0-rc.11", features = ["coreml"] }
ndarray = "0.17"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
prost = "0.13"
spellbook = "0.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1", features = ["metal"] }

core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSSound", "NSApplication", "NSRunningApplication"] }
block2 = "0.6"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = "0.1"
