[workspace]
members = [
    "crates/jona-types", "crates/jona-platform", "crates/jona-engines", "crates/jona-provider",
    "crates/jona-provider-openai", "crates/jona-provider-anthropic",
    "crates/jona-provider-deepgram", "crates/jona-provider-copilot",
    "crates/jona-provider-gemini-asr", "crates/jona-provider-revai",
    "crates/jona-provider-assemblyai", "crates/jona-provider-elevenlabs",
    "crates/jona-provider-cohere",
    "crates/jona-provider-gladia", "crates/jona-provider-speechmatics",
    "crates/jona-provider-azure-speech", "crates/jona-provider-azure-openai",
    "crates/jona-provider-google-speech", "crates/jona-provider-aws-transcribe",
    "crates/jona-engine-whisper", "crates/jona-engine-qwen", "crates/jona-engine-canary",
    "crates/jona-engine-parakeet", "crates/jona-engine-voxtral", "crates/jona-engine-llama",
    "crates/jona-engine-bert", "crates/jona-engine-pcs", "crates/jona-engine-correction",
    "crates/jona-engine-spellcheck",
    "crates/jona-engine-lm",
    "crates/jona-detector-claude-code",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
inventory = "0.3"
ort = { version = "2.0.0-rc.11", features = ["coreml"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
thiserror = "2"

[package]
name = "jona-whisper"
version = "0.1.0"
description = "JonaWhisper - Voice-to-text dictation"
authors = ["Jonathan"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "jona_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
jona-types = { path = "crates/jona-types" }
jona-platform = { path = "crates/jona-platform" }
jona-engines = { path = "crates/jona-engines" }
jona-provider = { path = "crates/jona-provider" }
jona-provider-openai = { path = "crates/jona-provider-openai" }
jona-provider-anthropic = { path = "crates/jona-provider-anthropic" }
jona-provider-deepgram = { path = "crates/jona-provider-deepgram" }
jona-provider-copilot = { path = "crates/jona-provider-copilot" }
jona-provider-gemini-asr = { path = "crates/jona-provider-gemini-asr" }
jona-provider-revai = { path = "crates/jona-provider-revai" }
jona-provider-assemblyai = { path = "crates/jona-provider-assemblyai" }
jona-provider-elevenlabs = { path = "crates/jona-provider-elevenlabs" }
jona-provider-cohere = { path = "crates/jona-provider-cohere" }
jona-provider-gladia = { path = "crates/jona-provider-gladia" }
jona-provider-speechmatics = { path = "crates/jona-provider-speechmatics" }
jona-provider-azure-speech = { path = "crates/jona-provider-azure-speech" }
jona-provider-azure-openai = { path = "crates/jona-provider-azure-openai" }
jona-provider-google-speech = { path = "crates/jona-provider-google-speech" }
jona-provider-aws-transcribe = { path = "crates/jona-provider-aws-transcribe" }
jona-engine-whisper = { path = "crates/jona-engine-whisper" }
jona-engine-qwen = { path = "crates/jona-engine-qwen" }
jona-engine-canary = { path = "crates/jona-engine-canary" }
jona-engine-parakeet = { path = "crates/jona-engine-parakeet" }
jona-engine-voxtral = { path = "crates/jona-engine-voxtral" }
jona-engine-llama = { path = "crates/jona-engine-llama" }
jona-engine-bert = { path = "crates/jona-engine-bert" }
jona-engine-pcs = { path = "crates/jona-engine-pcs" }
jona-engine-correction = { path = "crates/jona-engine-correction" }
jona-engine-spellcheck = { path = "crates/jona-engine-spellcheck" }
jona-engine-lm = { path = "crates/jona-engine-lm" }

tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }

tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"


serde.workspace = true
serde_json.workspace = true
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["stream", "multipart", "json", "blocking"] }
regex = "1"
tokio = { version = "1", features = ["time", "rt"] }
dirs = "6"
log.workspace = true
simplelog = "0.12"
rustfft = "6"
futures-util = "0.3"
shellexpand = "3"
thiserror.workspace = true
crossbeam-channel = "0.5.15"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-i18n = "3"
sys-locale = "0.3"
encoding_rs = "0.8"
ort.workspace = true
ndarray = "0.17"
tokenizers.workspace = true
prost = "0.13"
symspell = "0.4.5"
rphonetic = { version = "3.0", features = ["embedded_bm"] }

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1", features = ["metal"] }
jona-detector-claude-code = { path = "crates/jona-detector-claude-code" }

core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSSound", "NSApplication", "NSRunningApplication"] }
block2 = "0.6"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = "0.1"
