[package]
name = "jona-detector-claude-code"
version = "0.1.0"
edition = "2021"

[dependencies]
jona-types = { path = "../jona-types" }
inventory = "0.3"
serde_json = "1"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
whoami = "1"
