[package]
name = "jona-engine-bert"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
jona-types = { path = "../jona-types" }
jona-engines = { path = "../jona-engines" }
ort = { version = "2.0.0-rc.11", features = ["coreml"] }
candle-core = { version = "0.9", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9", features = ["metal", "accelerate"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
serde_json = "1"
log = "0.4"
