[package]
name = "jona-engine-bert"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
inventory.workspace = true
jona-types = { path = "../jona-types" }
jona-engines = { path = "../jona-engines" }
ort.workspace = true
candle-core = { version = "0.9", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9", features = ["metal", "accelerate"] }
tokenizers.workspace = true
serde_json.workspace = true
log.workspace = true
