[package]
name = "jona-engine-correction"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
inventory = "0.3"
jona-types = { path = "../jona-types" }
candle-core = { version = "0.9", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9", features = ["metal", "accelerate"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
serde_json = "1"
log = "0.4"
