[package]
name = "jona-engine-llama"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
inventory.workspace = true
jona-types = { path = "../jona-types" }
jona-engines = { path = "../jona-engines" }
encoding_rs = "0.8"
log.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = "0.1"
