[package]
name = "jona-engine-pcs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
inventory.workspace = true
jona-types = { path = "../jona-types" }
jona-engines = { path = "../jona-engines" }
ort.workspace = true
tokenizers.workspace = true
prost = "0.13"
log.workspace = true
