[package]
name = "jona-engine-whisper"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
inventory = "0.3"
jona-types = { path = "../jona-types" }
jona-engines = { path = "../jona-engines" }
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = "0.15"
