[package]
name = "jona-engines"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
jona-types = { path = "../jona-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json", "blocking", "multipart"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
ort = { version = "2.0.0-rc.11", features = ["coreml"] }
shellexpand = "3"
log = "0.4"
tauri = { version = "2" }
