[package]
name = "jona-engines"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
inventory.workspace = true
jona-types = { path = "../jona-types" }
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["stream", "json", "blocking"] }
hound = "3.5"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
ort.workspace = true
shellexpand = "3"
thiserror.workspace = true
log.workspace = true
rustfft = "6"
tauri = { version = "2" }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
