[package]
name = "jona-provider-anthropic"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
jona-types = { path = "../jona-types" }
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
inventory.workspace = true
log.workspace = true
