[package]
name = "jona-provider"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
jona-types = { path = "../jona-types" }
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
thiserror.workspace = true
log.workspace = true
