[package]
name = "jona-types"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
serde.workspace = true
serde_json.workspace = true
keyring = { version = "3", features = ["apple-native", "windows-native"] }
dirs = "6"
log.workspace = true
shellexpand = "3"
thiserror.workspace = true
inventory.workspace = true
